<resources>
    <string name="app_name">lab2</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="studentID">学号:</string>
    <string name="password">密码:</string>
    <string name="pleaseEnterID">请输入学号</string>
    <string name="pleaseEnterPassword">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="dialogButton">取消</string>
    <string name="dialogTitle">上传头像</string>
    <string name="dialogItem1">拍摄</string>
    <string name="dialogItem2">从相册选择</string>
    <string name="dialogItem1Msg">您选择了[拍摄]</string>
    <string name="dialogItem2Msg">您选择了[从相册选择]</string>
    <string name="dialogButtonMsg">您选择了[取消]</string>
    <string name="emptyID">学号不能为空</string>
    <string name="emptyPassword">密码不能为空</string>
    <string name="loginFailed">学号或密码错误</string>
    <string name="loginSuccessful">登录成功</string>
    <string name="snackbarButton">确认</string>
    <string name="snackbarSure">Snackbar的确认按钮被点击了</string>
    <string name="radioStudent">您选择了学生</string>
    <string name="radioTeacher">您选择了教职工</string>
    <string name="registerStudent">学生注册功能尚未启用</string>
    <string name="registerTeacher">教职工注册功能尚未启用</string>
</resources>
