<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xu_.lab2.lab2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!--<EditText-->
    <!--android:id="@+id/editText"-->
    <!--android:layout_width="240dp"-->
    <!--android:layout_height="45dp"-->
    <!--android:layout_marginEnd="20dp"-->

    <!--android:layout_marginTop="24dp"-->
    <!--android:hint="@string/pleaseEnterID"-->
    <!--android:inputType="number"-->
    <!--android:textSize="18sp"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/imageView"-->
    <!--android:layout_marginRight="20dp"-->
    <!--app:layout_constraintRight_toRightOf="parent" />-->

    <!--<EditText-->
    <!--android:id="@+id/editText2"-->
    <!--android:layout_width="240dp"-->
    <!--android:layout_height="45dp"-->
    <!--android:layout_marginEnd="20dp"-->
    <!--android:layout_marginRight="20dp"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:hint="@string/pleaseEnterPassword"-->
    <!--android:inputType="textPassword"-->
    <!--android:textSize="18sp"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/editText" />-->

    <Button
        android:background="@drawable/corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" />
    <Button
        android:background="@drawable/corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/register"
        android:id="@+id/register"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="60dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="160dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/studentID"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pleaseEnterID"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentID">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="8dp"
            android:hint="@string/pleaseEnterPassword"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/studentID"
            tools:layout_editor_absoluteX="9dp" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <RadioButton
            android:id="@+id/radioStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:checked="true"
            android:text="@string/student"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/teacher"
            android:textSize="18sp" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
